feat(add,admin,student) visible scrollbar

--- a/app/src/main/res/layout/fragment_admin.xml
+++ b/app/src/main/res/layout/fragment_admin.xml
@@ -100,6 +100,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/courses_all"
             android:layout_width="match_parent"
+            android:scrollbars="vertical"
+            android:fadeScrollbars="false"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="10dp"
             tools:listitem="@layout/fragment_course" />
