--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -10,5 +10,7 @@
         android:id="@+id/please"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:fadeScrollbars="false"
         tools:listitem="@layout/fragment_course" />
 </FrameLayout>
